...

        }

        PrimaryButton(
            modifier = Modifier
                .height(48.dp),
            title = "Pošalji poruku dobavljaču",
        ) {
            component.sendMessageToVendor(product)
        }
    }
}

...
