...
                }
            )
        }
    }

    fun title(): String {
        return if (userType.isShop()) "Prijava kupac" else "Prijava dobavljač"
    }

    fun wifi() {
        stateHolder.handler.openWifi()
    }

...
